Update Blender addon to Blender 2.80.
With Blender 2.80 the API changed significantly. The addon is updated to
reflect those changes.

--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,7 @@
 *#
 .#*
 *.pyc
-/apps/jta_tool/dist/
-/apps/jta_tool/*.egg-info
 *.blend?
 /src/tmp/
 /src/Makefile
+/apps/blender_addon/io_scene_jta.zip
